2005-03-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (allowcodebreaks): new node.
	* makeinfo/cmds.c: define @allowcodebreaks (as a no-op).
	* doc/texinfo.tex (\allowcodebreaks): new macro.
	(\code): use it.
	(\realunder, \keywordtrue, \keywordfalse, \ifallowcodebreaks):
	helpers.

2005-03-15  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.14.3.

2005-03-12  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.14.2.

2005-03-12  Karl Berry  <karl@gnu.org>

	* process_css_file: fclose the file when we're through with it,
	to avoid fd leaks.
	From: Matthias Kilian <kili@outback.escape.de>,
	11 Mar 2005 19:42:27 +0100.

2005-03-08  Keith Marshall  <keith.d.marshall@ntlworld.com>

	* makeinfo/tests/no-headers: ($nulldev): new variable.
	  set it to `/dev/null' normally, but to `nul' on Win32,
	  so Cygwin doesn't fail this test, in `make check'.

2005-03-08  Karl Berry  <karl@gnu.org>

	* info/filesys.h (DEFAULT_INFOPATH): make . first in the path,
	instead of last.  That way info -f foo/bar finds foo/bar.info.
	From: Bruno Haible <bruno@clisp.org>, 8 Mar 2005 13:45:28 +0100.

2005-03-07  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Fix -o when -c is not passed.
	Don't make thumbpdf failures fatal.

2005-03-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (General Index): Rename from Concept Index.

2005-02-28  Stepan Kasal  <kasal@ucw.cz>

	* util/texi2dvi: When running bibtex, improve quoting and again,
	  we can save a process by not running ls.  (Thanks, Akim.)

2005-02-24  Stepan Kasal  <kasal@ucw.cz>

	* util/texi2dvi (get_xref_files): No need to use ls, save a process.

2005-02-22  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (absolute_filenames): Skip nonexistent directories.
	Factor its invocations for TeX envvars.
	(fd6): Document and use more extensively.
	(get_xref_files): Accept bu[0-9]#.aux files from the bibunits
	package.