@@ -1,4 +1,4 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.34.
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.35.
 .TH TEXI2DVI "1" "March 2005" "texi2dvi 1.48" "User Commands"
 .SH NAME
 texi2dvi \- print Texinfo documents
